small correction to full constant script

--- a/monte-carlo/full_equilibirum_constant/tex/main.tex
+++ b/monte-carlo/full_equilibirum_constant/tex/main.tex
@@ -272,4 +272,9 @@
 	K =  \frac{K_p}{\lb p^{\barcirc} \rb^{\sum_i \nu_i}} \notag 
 \end{gather}
 
+Источники: 
+\begin{itemize}
+	\item Erno Keszei. Chemical Thermodynamics: An introduction. Springer-Verlag Berline Heidelberg, 2012
+	\item Ландау, Лифшиц. Том 5. Статистическая физика.
+\end{itemize}
 \end{document}
