small changes to rotation matrix pdf

--- a/sympy-and-stuff/rotation_matrix/main.tex
+++ b/sympy-and-stuff/rotation_matrix/main.tex
@@ -28,7 +28,7 @@
 
 Ориентируем лабораторную систему координат в начальный момент времени таким образом, что вектор $\bfj$ ориентирован вдоль оси $OZ$. Матрица, связывающие координаты векторов в лабораторной и подвижной системах координат выглядит следующим образом: 
 \begin{gather}
-\bfj = \bbS \bfJ = 
+\bfj = \bbS \, \bfJ = 
 \begin{bmatrix}
 0 \\
 0 \\
@@ -40,7 +40,7 @@ J
 \end{bmatrix} \notag
 \end{gather}
 
-Так как матрица $\bbS$ ортогональна, то $\bbS^{-1} = \bbS^\top$. Итак, получаем следующиие соотношения на углы $\theta, \psi$:
+Так как матрица $\bbS$ ортогональна, то $\bbS^{-1} = \bbS^\top$. Получаем следующие соотношения на углы $\theta, \psi$:
 \begin{gather}
 \left\{
 \begin{aligned}
