--- a/sympy-and-stuff/dipole_moment/main.tex
+++ b/sympy-and-stuff/dipole_moment/main.tex
@@ -90,7 +90,7 @@
 	\end{bmatrix} \notag
 \end{gather}
 
-Осуществим переход к дифференциальному оператору, содержащему производные по компонентам углового момента (не будем уточнять вид матрицы $\bbG$):
+Осуществим переход к дифференциальному оператору, содержащему производные по компонентам углового момента: 
 \begin{gather}
 	\widetilde{\partial} = 
 	\begin{bmatrix}
