--- a/sympy-and-stuff/perturb_theory/perturb.tex
+++ b/sympy-and-stuff/perturb_theory/perturb.tex
@@ -25,7 +25,7 @@
 
 \subsection*{Временная теория возмущений. Случай независимого от времени невозмущенного гамильтониана.}
 
-Рассмотрим вариант теории возмущений, полагая, что невозмущенный гамильтониан не зависит от времени, а возмущение зависит. Таким образом, возмущенный гамильтониан может быть разложен по степеням возмущения:
+Рассмотрим вариант теории возмущений, полагая, что невозмущенный гамильтониан не зависит от времени, а возмущение зависит. Возмущенный гамильтониан может быть разложен по степеням параметра возмущения $\lambda$:
 \vverh
 \begin{gather}
 	\hat{H}(t) = \hat{H}^{(0)} + \lambda \hat{V} = \hat{H}^{(0)} + \lambda \hat{H}^{(1)}(t) + \lambda^2 \hat{H}^{(2)}(t) + \dots \notag
@@ -49,7 +49,7 @@
 	\Psi(\mf{r}, t) = \sum_m a_m(t) \psi_m^{(0)} (\mf{r}) \exp \lb - \frac{i}{\hbar} E_m^{(0)} t \rb \notag
 \end{gather}
 
-Подставляя данное разложение во временное уравнение Шредингера, получаем (используем бракет нотацию $\psi_m = \ket{m^{(0)}}$):
+Подставляя данное разложение во временное уравнение Шредингера, получаем (используем бракет нотацию $\psi_m^{(0)} = \ket{m^{(0)}}$):
 \vverh
 \begin{gather}
 	i \hbar \sum_m \frac{d a_m(t)}{dt} \ket{m^{(0)}} \exp \lb - \frac{i}{\hbar} E_m^{(0)} t \rb = \sum_m a_m(t) \lambda \hat{V}(t) \ket{m^{(0)}} \exp \lb - \frac{i}{\hbar} E_m^{(0)} t \rb \notag  
@@ -158,8 +158,9 @@
 Энергия взаимодействия молекулярной системы с электрическим полем в дипольном приближении равна
 \vverh
 \begin{gather}
-	\lambda V(t) = - E_0 \lb \mf{M} \cdot \boldsymbol{\varepsilon} \rb \cos \omega t = - \frac{E_0}{2} \lb \mf{M} \cdot \boldsymbol{\varepsilon} \rb \lb \exp \lb i \omega t \rb + \exp \lb - i \omega t \rb \rb .\notag
+	\lambda V(t) = - E_0 \lb \mf{M} \cdot \boldsymbol{\varepsilon} \rb \cos \omega t = - \frac{E_0}{2} \lb \mf{M} \cdot \boldsymbol{\varepsilon} \rb \lb \exp \lb i \omega t \rb + \exp \lb - i \omega t \rb \rb ,\notag
 \end{gather}
+где $\mf{M}$ -- суммарный дипольный момент системы.
 
 Запишем матричный элемент $H_{jk}$  и используем его для нахождения коэффициента $a_k^{(1)}$:
 \vverh
@@ -176,16 +177,16 @@
 
 \subsection*{Спектральная функция и автокорреляция дипольного момента}
 
-Используя выражение \eqref{eq:prob} получим скорость излучения энергии системой (скорость потому что вероятность $P_{j \rightarrow k}$ в выражении \eqref{eq:prob} нормирована на единицу времени). Умножая вероятность $P_{j \rightarrow k}$ на $\hbar \omega_{jk}$, получаем скорость излучения энергии системы в переходах $j \rightarrow k$; просуммировав по всем состояниям $\ket{k}$, получаем скорость излучения с уровня $\ket{j}$. И, наконец, просуммировав по начальным состояниям $\ket{j}$ с соответствующими весами $\rho_j$ -- вероятностью нахождения системы в состоянии $\ket{j}$ -- получим скорость излучения энергии системой:
+Используя выражение \eqref{eq:prob} получим скорость излучения энергии системой (скорость потому что вероятность $P_{j \rightarrow k}$ в выражении \eqref{eq:prob} нормирована на единицу времени). Умножая вероятность $P_{j \rightarrow k}$ на $\hbar \omega_{jk}$, получаем скорость поглощения энергии системой в переходах $j \rightarrow k$; просуммировав по всем состояниям $\ket{k}$, получаем скорость поглощения в переходах с уровня $\ket{j}$. И, наконец, просуммировав по начальным состояниям $\ket{j}$ с соответствующими весами $\rho_j$ -- вероятностью нахождения системы в состоянии $\ket{j}$, получим суммарную скорость поглощения:
 \vverh
 \begin{gather}
 	- \dot{E}_{rad} = \sum_j \sum_k \rho_j \hbar \omega_{jk} P_{j \rightarrow k} = \frac{\pi E_0^2}{2 \hbar} \sum_j \sum_k \omega_{jk} \rho_j | \bra{j} \mf{M} \cdot \boldsymbol{\varepsilon} \ket{k} |^2 \Bigg[ \delta \lb \omega_{jk} - \omega \rb + \delta \lb \omega_{jk} + \omega \rb \Bigg] \label{eq:rad}
 \end{gather}
 
-Раскрыв скобку в последнем выражении, отдельно рассмотрим вторую сумму (первая замена возможна, поскольку оба суммирования производятся по всем квантовым состояниям системы):
+Раскрыв скобку в \eqref{eq:rad}, отдельно рассмотрим вторую сумму (первая замена возможна, поскольку оба суммирования производятся по всем квантовым состояниям системы, индексы неразличимы):
 \vverh
 \begin{gather}
-	\frac{\pi E_0^2}{2 \hbar} \sum_j \sum_k \omega_{jk} \rho_j | \bra{j} \mf{m} \cdot \boldsymbol{\varepsilon} \ket{k} |^2 \delta \lb \omega_{jk} + \omega \rb = \left[ j \leftrightarrow k \right] = \frac{\pi E_0^2}{2 \hbar} \sum_j \sum_k \omega_{kj} \rho_k | \bra{k} \mf{M} \cdot \boldsymbol{\varepsilon} \ket{j} |^2 \delta \lb \omega_{kj} + \omega \rb = \notag \\
+	\frac{\pi E_0^2}{2 \hbar} \sum_j \sum_k \omega_{jk} \rho_j | \bra{j} \mf{M} \cdot \boldsymbol{\varepsilon} \ket{k} |^2 \delta \lb \omega_{jk} + \omega \rb = \left[ j \leftrightarrow k \right] = \frac{\pi E_0^2}{2 \hbar} \sum_j \sum_k \omega_{kj} \rho_k | \bra{k} \mf{M} \cdot \boldsymbol{\varepsilon} \ket{j} |^2 \delta \lb \omega_{kj} + \omega \rb = \notag \\
 	= \left[ \omega_{kj} = - \omega_{jk}, \delta \lb \omega - \omega_{jk} \rb = \delta \lb \omega_{jk} - \omega \rb \right] = - \frac{\pi E_0^2}{2 \hbar} \sum_j \sum_k \omega_{jk} \rho_k | \bra{j} \mf{M} \cdot \boldsymbol{\varepsilon} \ket{k} |^2 \delta \lb \omega_{jk} - \omega \rb \notag
 \end{gather}
 
@@ -211,36 +212,36 @@
 	S = \frac{c}{8 \pi} n E_0^2, \notag
 \end{gather}
 
-где $n$ -- показатель преломления среды. Показатель поглощения среды $\alpha(\omega)$ определим как коэффициент, связывающий энергию, поглощенную средой, с энергией, переносимой полем:
+где $n$ -- показатель преломления среды. Показатель поглощения среды $\alpha(\omega)$ определим как отношение энергии, поглощенной средой, и энергии, переносимой полем:
 \vverh
 \begin{gather}
 	\alpha(\omega) = \frac{4 \pi^2}{\hbar c n} \omega \lb 1 - \exp \lb - \beta \hbar \omega \rb \rb \sum_{j, k} \rho_j | \bra{j} \mf{M} \cdot \boldsymbol{\varepsilon} \ket{k} |^2 \delta \lb \omega_{jk} - \omega \rb \notag
 \end{gather}
 
-``Удобно определить`` (?, McQuarrie) спектральную функцию (absorption lineshape) $J(\omega)$ следующим образом  
+``Удобно определить`` (?) спектральную функцию (absorption lineshape) $J(\omega)$ следующим образом  
 \vverh
 \begin{gather}
 	J(\omega) = \frac{3 \hbar c n \alpha(\omega)}{4 \pi^2 \omega \lb 1 - \exp \lb - \beta \hbar \omega \rb \rb} = 3 \sum_{j, k} \rho_j | \bra{j} \mf{M} \cdot \boldsymbol{\varepsilon} \ket{k} |^2 \delta \lb \omega_{jk} - \omega \rb \label{eq:specfunc} 
 \end{gather}
 
-В дальнейшем рассуждении применяется представление Гейзенберга квантовой механики, в котором эволюция системы описывается операторами, а не состояниями, которые остаются постоянными. Эволюция оператора описывается оператором эволюции $U(t)$ следующим образом:
+В дальнейшем рассуждении применяется представление Гейзенберга квантовой механики, в котором эволюция системы заложена в операторах, а не в состояниях, которые остаются постоянными. Эволюция оператора, как в Шредингеровском представлении эволюция состояния, описывается оператором эволюции $U(t)$:
 \vverh
 \begin{gather}
 	A(t) = U^{*}(t) A(0) U(t) = \exp \lb \frac{i}{\hbar} \mH t \rb A(0) \exp \lb - \frac{i}{\hbar} \mH t \rb \notag
 \end{gather}
 
-В выражении \eqref{eq:specfunc} подставим дельта-функционал как преобразование Фурье экспоненты:
+В выражении \eqref{eq:specfunc} подставим дельта-функционал как преобразование Фурье экспоненты: 
 \vverh
 \begin{gather}
-	\delta(\omega) = \frac{1}{2 \pi} \int\limits_{-\infty}^{\infty} \exp \lb i \omega t \rb \notag \\
-	J(\omega) = \frac{3}{2 \pi} \sum_{j, k} \rho_j \bra{j} \mf{M} \cdot \boldsymbol{\varepsilon} \ket{k} \bra{k} \mf{M} \cdot \boldsymbol{\varepsilon} \ket{j} \int\limits_{-\infty}^{\infty} \exp \lb \frac{E_k - E_j}{\hbar} - \omega \rb dt \notag
+	\delta(\omega) = \frac{1}{2 \pi} \int\limits_{-\infty}^{\infty} \exp \lb i \omega t \rb dt \notag \\
+	J(\omega) = \frac{3}{2 \pi} \sum_{j, k} \rho_j \bra{j} \mf{M} \cdot \boldsymbol{\varepsilon} \ket{k} \bra{k} \mf{M} \cdot \boldsymbol{\varepsilon} \ket{j} \int\limits_{-\infty}^{\infty} \exp \lb i \lb \frac{E_k - E_j}{\hbar} - \omega \rb t \rb dt \notag
 \end{gather}
 
 Соберем под интегралом Гейзенберговское представление оператора дипольного момента:
 \vverh
 \begin{gather}
 	\exp \lb - \frac{i}{\hbar} E_j t \rb \ket{j} = \exp \lb - \frac{i}{\hbar} \mH t \rb \ket{j}, \quad \exp \lb \frac{i}{\hbar} E_k t \rb \bra{k} = \exp \lb \frac{i}{\hbar} \mH t \rb \bra{k} \notag \\
-	\exp \lb \frac{i}{\hbar} \lb E_k - E_j \rb t \rb \bra{k} \mf{M} \cdot \boldsymbol{\varepsilon} \ket{j} = \bra{k} \boldsymbol{\varepsilon} \exp \lb \frac{i}{\hbar} \mH t \rb \mf{M} \exp \lb - \frac{i}{\hbar} \mH t \rb \ket{j} = \bra{k} \mf{M}(t) \cdot \boldsymbol{\varepsilon} \ket{j} \ket{j} \notag \\
+	\exp \lb \frac{i}{\hbar} \lb E_k - E_j \rb t \rb \bra{k} \mf{M} \cdot \boldsymbol{\varepsilon} \ket{j} = \bra{k} \boldsymbol{\varepsilon} \exp \lb \frac{i}{\hbar} \mH t \rb \mf{M} \exp \lb - \frac{i}{\hbar} \mH t \rb \ket{j} = \bra{k} \mf{M}(t) \cdot \boldsymbol{\varepsilon} \ket{j} \notag \\
 	J(\omega) = \frac{3}{2 \pi} \int\limits_{-\infty}^{\infty} \sum_{j, k} \rho_j \bra{j} \mf{M} \cdot \boldsymbol{\varepsilon} \ket{k} \bra{k} \mf{M}(t) \cdot \boldsymbol{\varepsilon} \ket{j} \exp \lb - i \omega t \rb dt \label{eq:specfunc2} 
 \end{gather}
 
@@ -250,7 +251,7 @@
 	J(\omega) = \frac{3}{2 \pi} \int\limits_{-\infty}^{\infty} \sum_j \rho_j \bra{j}  \mf{M}(0) \cdot \boldsymbol{\varepsilon} \cdot \mf{M}(t) \cdot \boldsymbol{\varepsilon} \ket{j} \exp \lb - i \omega t \rb dt \notag
 \end{gather}
 
-Сумма в подынтегральном выражении является средним по ансамблю среднего значения опертора $\mf{M}(0) \cdot \boldsymbol{\varepsilon} \cdot \mf{M}(t) \cdot \boldsymbol{\varepsilon}$, далее будем обозначать его $\langle \mf{M}(0) \cdot \boldsymbol{\varepsilon} \cdot \mf{M}(t) \cdot \boldsymbol{\varepsilon} \rangle$. Считая среду изотропной, опустим единичные векторы $\boldsymbol{\varepsilon}$. 
+Сумма в подынтегральном выражении является средним по ансамблю значением оператора $\mf{M}(0) \cdot \boldsymbol{\varepsilon} \cdot \mf{M}(t) \cdot \boldsymbol{\varepsilon}$, далее будем обозначать его $\langle \mf{M}(0) \cdot \boldsymbol{\varepsilon} \cdot \mf{M}(t) \cdot \boldsymbol{\varepsilon} \rangle$. Считая среду изотропной, опустим единичные векторы $\boldsymbol{\varepsilon}$. Таким образом, спектральная функция $J(\omega)$ является преобразованием Фурье автокорреляционной функции дипольного момента (автокорреляции оператора дипольного момента). 
 \vverh
 \begin{gather}
 	J(\omega) = \frac{3}{2 \pi} \int\limits_{-\infty}^{\infty} \langle \mf{M}(0) \mf{M}(t) \rangle \exp \lb - i \omega t \rb dt \notag
