--- a/sympy-and-stuff/perturb_theory/perturb.tex
+++ b/sympy-and-stuff/perturb_theory/perturb.tex
@@ -21,6 +21,8 @@
 \newcommand{\mf}{\mathbf}
 \newcommand{\vverh}{\vspace*{-0.15cm}}
 
+\newcommand{\intty}{\int\limits_{-\infty}^{\infty}}
+
 \begin{document}
 
 \subsection*{Временная теория возмущений. Случай независимого от времени невозмущенного гамильтониана.}
@@ -255,6 +257,47 @@
 \vverh
 \begin{gather}
 	J(\omega) = \frac{3}{2 \pi} \int\limits_{-\infty}^{\infty} \langle \mf{M}(0) \mf{M}(t) \rangle \exp \lb - i \omega t \rb dt \notag
+\end{gather}
+
+Соответствие $\sum_j \rho_j \bra{j} \mf{M}(0) \mf{M}(t) \ket{j} \rightarrow \displaystyle \langle \int\limits_{-\infty}^{\infty} \mf{M}(\tau) \mf{M}(t + \tau) dt \rangle$?
+
+\subsection*{Корреляционная теорема и спектральная функция}
+
+\begin{gather}
+	f \bigstar g = \intty \bar{f}(\tau) g(t + \tau) d \tau = \intty \left[ \, \intty \bar{F}(\omega) \exp(-i \omega \tau) \frac{d \omega}{2 \pi} \right] \left[ \, \intty G(\omega^\prime) \exp \lb i \omega^\prime ( t + \tau) \rb \frac{d \omega^\prime}{2 \pi} \right] d \tau = \notag \\
+	= \intty \intty \bar{F}(\omega) G(\omega^\prime) \exp \lb i \omega^\prime t \rb \left[ \, \intty \exp \lb i \tau (\omega^\prime - \omega) \rb \frac{d \tau}{2 \pi} \right] \frac{d \omega}{2 \pi} \frac{d \omega^\prime}{2 \pi} = \intty \intty \bar{F}(\omega)G(\omega^\prime) \exp \lb i \omega^\prime t \rb  \delta \lb \omega - \omega^\prime \rb \frac{d \omega}{2 \pi} d \omega^\prime = \notag \\
+	= \intty \bar{F}(\omega) G(\omega) \exp \lb i \omega t \rb \frac{d \omega}{2 \pi} = F^{-1} \left[ \bar{F}(\omega) G(\omega) \right] \notag \\
+	F \left[ f \bigstar g \right] = \bar{F}(\omega) G(\omega) \notag
+\end{gather}
+
+Обозначим $C(t)$ автокорреляцию дипольного момента:
+\vverh
+\begin{gather}
+	C(t) = \intty \boldsymbol{\mu}(\tau) \boldsymbol{\mu}(t + \tau) d \tau = \sum_{\alpha = x, y, z} \intty \mu_\alpha(\tau) \mu_\alpha(t + \tau) d \tau = C_x (t) + C_y(t) + C_z(t) \notag
+\end{gather}
+
+Рассмотрим преобразование Фурье от автокорреляционной функции дипольного момента:
+\vverh \vverh \vverh \vverh \vverh
+\begin{gather}
+	F[C(t)] = \intty C(t) \exp \lb - i \omega t \rb dt = \sum_{\alpha = x, y, z} \intty C_\alpha(t) \exp \lb - i \omega t \rb dt = \sum_{\alpha = x, y, z} \Bigg{|} \intty \mu_\alpha(t) \exp \lb - i \omega t \rb dt \Bigg{|}^2 \notag
+\end{gather}
+
+Заметим, что этот результат можно представить как комплексный скалярный квадрат вектора $\mf{F}$, определенного следующим образом:
+\vverh
+\begin{gather}
+	\mf{F}(\omega) = \intty \boldsymbol{\mu}(t) \exp \lb - i \omega t \rb dt = 
+\begin{bmatrix}
+	{\displaystyle \intty \mu_x(t) \exp \lb - i \omega t \rb dt} \\
+	{\displaystyle \intty \mu_y(t) \exp \lb - i \omega t \rb dt} \\
+	{\displaystyle \intty \mu_z(t) \exp \lb - i \omega t \rb dt} 
+\end{bmatrix}, \quad
+\mf{F}^{*}(\omega) =
+\begin{bmatrix}
+	{\displaystyle \intty \mu_x(t) \exp \lb + i \omega t \rb dt} \\
+	{\displaystyle \intty \mu_y(t) \exp \lb + i \omega t \rb dt} \\
+	{\displaystyle \intty \mu_z(t) \exp \lb + i \omega t \rb dt}
+\end{bmatrix} \notag \\
+F[C(t)] = \intty C(t) \exp \lb - i \omega \rb dt = \sum_{\alpha} F_\alpha^{*} F_\alpha = \lb \mf{F}, \mf{F} \rb_{\mathbb{C}^n} \notag
 \end{gather}
 
 \end{document}
